--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hola</h1>
+    <h1>hola i am very tired</h1>
+    <h2>It is wednesday</h2>
 </body>
 </html>
